package model.interfaces;

public interface IUndoable {

  void undo();

  void redo();
}